@@ -160,6 +160,9 @@ S3method(deltaMethod,polr)
 S3method(deltaMethod, nls)
 S3method(deltaMethod, survreg)
 S3method(deltaMethod, coxph)
+S3method(deltaMethod, mer)
+S3method(deltaMethod, lme)
+S3method(deltaMethod, lmList)
 S3method(dfbetaPlots, lm)
 S3method(dfbetasPlots, lm)
 S3method(durbinWatsonTest, default)
