@@ -7,6 +7,9 @@
 \alias{deltaMethod.polr} 
 \alias{deltaMethod.survreg}
 \alias{deltaMethod.coxph}
+\alias{deltaMethod.mer}
+\alias{deltaMethod.lme}
+\alias{deltaMethod.lmList}
 
 \title{Estimate and Standard Error of a Nonlinear Function of Estimated Regression 
 Coefficients}
@@ -20,17 +23,27 @@ with known or estimated covariance matrix.
 deltaMethod(object, ...)
 
 \method{deltaMethod}{default}(object, g, vcov., func=g, ...)
-\method{deltaMethod}{lm} (object, g, vcov.=vcov, parameterPrefix="b", ...)
+\method{deltaMethod}{lm} (object, g, vcov.=vcov, 
+ parameterNames=names(coef(object)), ...)
 \method{deltaMethod}{nls}(object, g, vcov.=vcov, ...)
-\method{deltaMethod}{multinom} (object, g, vcov.=vcov, parameterPrefix="b", ...)
+\method{deltaMethod}{multinom} (object, g, vcov. = vcov, parameterNames = 
+    if (is.matrix(coef(object))) colnames(coef(object)) else names(coef(object)), 
+    ...) 
 \method{deltaMethod}{polr} (object, g, vcov.=vcov, ...)
-\method{deltaMethod}{survreg} (object, g, vcov.=vcov, ...)
-\method{deltaMethod}{coxph} (object, g, vcov.=vcov, ...)
+\method{deltaMethod}{survreg} (object, g, vcov. = vcov, 
+           parameterNames = names(coef(object)), ...)
+\method{deltaMethod}{coxph} (object, g, vcov. = vcov, 
+           parameterNames = names(coef(object)), ...)
+\method{deltaMethod}{mer} (object, g, vcov. = vcov,
+           parameterNames = names(fixef(object)), ...)
+\method{deltaMethod}{lme} (object, g, vcov. = vcov,
+           parameterNames = names(fixef(object)), ...)
+\method{deltaMethod}{lmList} (object, g,  ...)
 
 }
 \arguments{
   \item{object}{For the default method, \code{object} is a named vector of \code{p} 
-  elements.  This means that the call \code{names(object)} would return a list
+  named elements.  This means that the call \code{names(object)} would return a list
   of \code{p} character strings that are the names of the elements of
   \code{object}.  For the other methods, \code{object} is a 
   regression object for which \code{coef(object)} returns a vector of parameter
@@ -45,10 +58,12 @@ deltaMethod(object, ...)
   to use the function \code{vcov}.}
   \item{func}{A quoted string used to annotate output.  The default of
   \code{func = g} is usually appropriate.}
-  \item{parameterPrefix}{Typically a single letter with default
-  \code{"b"} giving the prefix of the
-  names of the parameter names used in the argument \code{g} for some
-  regression models; see details.}
+  \item{parameterNames}{A character vector of length \code{p}that gives the 
+  names of the parameters in the same order as they appear in the vector of
+  estimates.  This argument will only be useful if some of the names in the
+  vector of estimates include meta-characters, like \code{I(x2^2)}, or 
+  \code{x1:x2} that will confuse the numerical differentiation function.  See
+  details below.}
   \item{...}{Additional arguments; not currently used.}
 }
 
@@ -64,7 +79,9 @@ variance.
 
 The default method requires that you provide \eqn{x} in the argument
 \code{object}, \eqn{C} in the argument \code{vcov.}, and a text expression
-in argument \code{g} that when evaluated gives the function \eqn{g}.  
+in argument \code{g} that when evaluated gives the function \eqn{g}.  The
+call \code{names(object)} must return the names of the elements of \code{x}
+that are used in the expression \code{g}.  
 
 Since
 the delta method is often applied to functions of regression parameter 
@@ -72,7 +89,16 @@ estimates, the argument \code{object} may be the name of a regression
 object from which the vector \eqn{x} will be taken from \code{coef(object)},
 and \eqn{C} will be taken from \code{vcov(object)} unless you provide
 some other estimate of variance, for example, using a sandwich estimator.  Methods
-have been provided for several common regression models.   
+have been provided for several common regression models.  
+
+In regression models, the names of the coefficients are taken by default from
+\code{names(coef(object))}, and this can cause problems if some of the names include
+special characters like \code{(Intercept)} or \code{x1:x2} or \code{I(x^2)}.
+In all of these cases, the names of the variables will confuse the \code{D} 
+fucntion used for numerical differentiation.  If the expression \code{g} will
+include a variable with a name with special characters, you can use the 
+\code{parameterNames} argument to
+redefine the parameter names.  See the examples.   
 
 For regression models for which methods are not provided, you must extract
 the named vector of coefficient estimates and and estimate of its covariance
@@ -83,15 +109,16 @@ that gives the function of interest.  For example, if you set
 \code{m2 <- lm(Y ~ X1 + X2)}, then \code{deltaMethod(m2,"X1/X2")} applies the
 delta method to the ratio of the coefficient estimates for \code{X1} and
 \code{X2}.  For the product of the interecpt and the coefficient of \code{X2},
-use \code{deltaMethod(m2, "(Intercept)*X2")}, since the name of the interecpt
-parameter estimate is \code{(Intercept)}. 
+use \code{deltaMethod(m2, "b0*b2", parameterNames=c("b0", "b1", "b2"))}, since 
+the name of the interecpt parameter estimate is \code{(Intercept)} includes
+the parentheses. 
 
-For models of type \code{lm}, \code{glm} and \code{polr}, you can replace the
-names in the coefficient vector by \code{b0}, \code{b1}, ..., \code{bp}; you can
-also change the prefix \code{b} using the \code{parameterPrefix} argument.
-For \code{multinom} objects you 
-can only use the parameter names starting with the prefix, not the names of
-the corresponding regressors. 
+For \code{multinom} objects, the \code{coef} function returns a matrix of
+coefficients, with each row giving the estimates for comparisons of one category
+to the baseline.  The \code{deltaMethod} function applies the delta method to
+each row of this matrix.  Similarly, for \code{lmList} and \code{nlsList}
+objects, the delta method is computed for each element of the list of
+models fit. 
 
 For nonlinear regression objects of type nls, the call \code{coef(object)} 
 returns the estimated
@@ -101,7 +128,16 @@ For example,
 have parameters named  \code{c("theta", "gamma")}.   
 In many other familiar regression methods, such as lm and glm, the names of
 the coefficient estimates are the corresponding variable names, not
-parameter names.    
+parameter names. 
+
+For mixed-effects models fit with \code{lmer} and \code{nlmer} from the 
+\code{lme4} package or \code{lme} and \code{nlme} from the \code{nlme} package, 
+only fixed-effect coefficients are considered.
+
+Earlier versions of \code{deltaMethod} included an argument 
+\code{parameterPrefix} that implemented the same functionality as the
+\code{parameterNames} argument, but it caused several unintended bugs that
+were not easily fixed without the change in syntax.  
 }
 
 \value{
@@ -130,9 +166,11 @@ and John Fox \email{jfox@mcmaster.ca}}
 
 \examples{
 m1 <- lm(time ~ t1 + t2, data = Transact) 
-deltaMethod(m1, "b1/b2") # ratio of coefficients
+deltaMethod(m1, "b1/b2", parameterNames= paste("b", 0:2, sep="")) 
 deltaMethod(m1, "t1/t2") # use names of preds. rather than coefs.
 deltaMethod(m1, "t1/t2", vcov=hccm) # use hccm function to est. vars.
+# to get the SE of 1/intercept, rename coefficients
+deltaMethod(m1, "1/b0", parameterNames= paste("b", 0:2, sep=""))
 # The next example calls the default method by extracting the
 # vector of estimates and covariance matrix explicitly
 deltaMethod(coef(m1), "t1/t2", vcov.=vcov(m1)) 
